<resources>
    <string name="app_name">BMI calculator</string>
    <string name="weight_tag">Weight : </string>
    <string name="hint_weight">Enter your weight</string>
    <string name="height_tag">Height (in feet) : </string>
    <string name="heading">BMI CALCULATOR</string>
    <string name="inches_tag">Height (in inches) : </string>
    <string name="hint_height">Enter your height (in feet)</string>
    <string name="hint_inches">Enter your height(In inch)</string>
    <string name="text_button">CALCULATE BMI</string>
    <string name="result_btn">RESULT</string>
    <string name="male_btn">Male</string>
    <string name="female_btn">Female</string>
</resources>